@@ -221,6 +221,7 @@ Fixes:
    * Fix null pointer access on naviframe item deletion.
    * Fix the toolbar item clipped problem on reordering items.
    * Fix elm_object_cursor_theme_search_enabled_set to do as it's name described.
+   * Elm_entry_filter_accept_set function now can recognize tags.
 
 Removals:
 
